--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -211,33 +211,35 @@
                                     <div class="caja-cuatro-more">
                                         <h:outputText value="#{hablarControlador.hablarModeloLista[3].tarjeta}"/>
                                     </div>
-
                                 </div>
-
                             </div>
                         </li>
                         <li class="complete-sentences">
                             <h1 class="lescuadron uk-text-center letra-titulo">#{alumno['activities.title.comple.all.sentences']}</h1>
                             <h:panelGroup layout="block" styleClass="contedor-oraciones" pt:ondrop="drop(event, this)" pt:ondragover="allowDrop(event)"/>
-                            <h:form id="formulario-completar">
-                                <div >
-                                    <ul class="uk-subnav uk-subnav-pill uk-margin-top menu-ordenar" uk-switcher="">
-                                        <ui:repeat value="#{completarOracionesControlador.tareaCompletarModeloLista}" var="texto" varStatus="estatus">
-                                            <li class="#{empty texto.oracion? 'boton-falta' : 'boton-listo'}">#{estatus.index + 1}</li>
-                                        </ui:repeat>
-                                    </ul>
-                                    <ul class="uk-switcher uk-margin remplazar">
-                                        <ui:repeat value="#{completarOracionesControlador.tareaCompletarModeloLista}"  var="texto" varStatus="">
-                                            <li data-cardinalidad="#{texto.cardinalidad}"><h:outputText value="#{texto.oracion}" escape="false"/> </li>
-                                        </ui:repeat>
-                                    </ul>
-                                </div>
-                                <h:outputText value="Respondido" rendered="#{not empty completarOracionesControlador.tareaCompletarModeloLista[0].respuesta}"/>
-                                <h:inputHidden id="input-respuesta" value="#{completarOracionesControlador.respeusta}" rendered="#{empty completarOracionesControlador.tareaCompletarModeloLista[0].respuesta}"/>
-                                <h:commandButton styleClass="boton-enviar boton-trasladar" value="Send" rendered="#{empty completarOracionesControlador.tareaCompletarModeloLista[0].respuesta}">
-                                    <f:ajax execute="@form" listener="#{completarOracionesControlador.enviarRespuesta}" render="@form"/>
-                                </h:commandButton>
-                            </h:form>
+                            <div>
+                                <ul class="uk-subnav uk-subnav-pill uk-margin-top menu-ordenar" uk-switcher="">
+                                    <ui:repeat value="#{completarOracionesControlador.tareaCompletarModeloLista}" var="texto" varStatus="estatus">
+                                        <li class="#{empty texto.oracion ? 'boton-falta' : 'boton-listo'}">#{estatus.index + 1}</li>
+                                    </ui:repeat>
+                                </ul>
+                                <ul class="uk-switcher uk-margin remplazar">
+                                    <ui:repeat value="#{completarOracionesControlador.tareaCompletarModeloLista}"  var="texto">
+                                        <li data-cardinalidad="#{texto.cardinalidad}">
+                                            <h:form>
+                                                <h:outputText value="#{texto.oracion}" escape="false"/>
+                                                <h:inputHidden value="#{texto.respuesta}" rendered="#{not empty texto.respuesta}"/>
+                                                <h:commandButton styleClass="boton-enviar boton-trasladar"
+                                                                 value="Send"
+                                                                 onclick="return validaRespuesta(event)"
+                                                                 rendered="#{empty texto.respuesta}">
+                                                    <f:ajax execute="@form" listener="#{completarOracionesControlador.enviarRespuesta(texto.id)}" render="@form"/>
+                                                </h:commandButton>
+                                            </h:form>
+                                        </li>
+                                    </ui:repeat>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                 </div>
