--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -135,7 +135,7 @@
                                     <div class="uk-width-1-2@m uk-position-relative">
                                         <div class="titulo-respuesta-ordenar">#{alumno['activities.title.match.sentence.answer']}</div>
                                         <ui:repeat value="#{relacionarOracionControlador.tareaRelacionarOracionModeloLista}" var="relacionarOracion" varStatus="cont">
-                                            <h:panelGroup  id="cont#{cont.index}" layout="block" styleClass="respuestas-ordenar-lista" pt:ondrop="drop(event, this)" pt:ondragover="allowDrop(event)" >
+                                            <h:panelGroup  id="cont#{cont.index}" layout="block" styleClass="respuestas-ordenar-lista x-panel-ghost" pt:ondrop="drop(event, this)" pt:ondragover="allowDrop(event)" >
                                                 <h:panelGroup layout="block" rendered="#{not empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[cont.index].respuesta}" styleClass="respuesta">
                                                     #{relacionarOracionControlador.respuestaVal(relacionarOracionControlador.tareaRelacionarOracionModeloLista[cont.index].respuesta)}
                                                 </h:panelGroup>
@@ -152,7 +152,7 @@
                                     <ui:repeat value="#{relacionarOracionControlador.desordenaLista(relacionarOracionControlador.tareaRelacionarOracionModeloLista)}" var="preRespuestas" varStatus="resp">
                                         <h:panelGroup id="resp#{resp.index}"
                                                       layout="block"
-                                                      styleClass="respuesta"
+                                                      styleClass="respuesta x-panel-ghost"
                                                       pt:data-id="#{preRespuestas.relacionarOracionModelo.id}"
                                                       pt:draggable="true"
                                                       pt:ondragstart="drag(event)"
