--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -191,7 +191,7 @@
                                             </h:panelGroup>
                                             <h:inputHidden value="#{tareaGramaticaControlador.respuesta}"/>
                                             <h:commandButton value="Send" styleClass="boton-enviar boton-trasladar" onclick="return completarPalabra(event)" rendered="#{empty gramatica.respuesta}">
-                                                <f:ajax listener="#{tareaGramaticaControlador.enviarRespuesta(gramatica.codigo, gramatica.actividadModelo.idVideo)}"
+                                                <f:ajax listener="#{tareaGramaticaControlador.enviarRespuesta(gramatica.codigo, gramatica.actividadModelo.idVideo, gramatica.vuelta, gramatica.palabra)}"
                                                         execute="@form" onevent="function funcion(data) { remueveOrdenador(data) }"/>
                                             </h:commandButton>
                                         </h:form>
@@ -301,7 +301,7 @@
                 texto.forEach(function (value) {
                     respuesta = respuesta.concat(value.textContent).concat(' ');
                 });
-                elemento.previousElementSibling.value = respuesta.trim();
+                evento.target.previousElementSibling.value = respuesta.trim();
             }
 
             function remueveOrdenador(data) {
