Cuando no tiene tarjeta de discusión ahora no muestra la opción

--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -91,7 +91,7 @@
                         <li uk-filter-control=".relacion-imagen" uk-tooltip="Relacionar Imagen" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarControlador.relacionarModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
-                        <li uk-filter-control=".talking" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0">
+                        <li uk-filter-control=".talking" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0" style="display: #{empty hablarControlador.hablarModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
                         <li uk-filter-control=".complete-sentences" uk-tooltip="Completar Oraciones" class="uk-animation-toggle" tabindex="0" style="display: #{empty completarOracionesControlador.tareaCompletarModeloLista ? 'none' : 'block'}">
