correccion de boton de inicio de sesion

--- a/tecolotl-web/src/main/webapp/alumno/inicio-sesion.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/inicio-sesion.xhtml
@@ -18,8 +18,8 @@
                         <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
                     </c:forEach>
                 </div>
-                <div class="uk-margin-small-top">
-                    <h:link  outcome="dashboard" styleClass="uk-flex uk-flex-center"><button class="boton-escuadron-base-secundary">Aceptar</button></h:link>
+                <div class="uk-margin-small-top uk-flex uk-flex-center">
+                    <h:link  outcome="dashboard" styleClass=" boton-escuadron-base-secundary " value="Aceptar"/>
                 </div>
             </div>
             <h:outputScript library="js" name="alumno/inicio-sesion.js"/>
