--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -78,7 +78,7 @@
 
             <div class="uk-container fondo-mapa-efecto margen-mapa-efecto contenedor-efecto ">
                 <h:panelGroup layout="block">
-                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="mov2 fin2" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="desplaza2 final2" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                     <!--<span>#{alumno['map2.title.answered']}</span>-->
                 </h:panelGroup>
                 <div class="imagen-pez uk-margin-auto">
