--- a/tecolotl-web/src/main/webapp/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/biblioteca-libre/free-library.xhtml
@@ -91,8 +91,8 @@
                     <li data-uk-filter-control=".C2"><a href="#">Level C2</a></li>
                 </ul>
 
-                <ul  class="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" uk-grid="">
-
+                <ul>
+                    <h:form styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" pt:uk-grid="">
                         <ui:repeat value="#{bibliotecaLibreControlador.actividadModeloLista}" var="actividadModelo">
                             <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}">
                                 <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguajeModeloLista[0].valor}" pt:data-tags="a beautiful landscape - nature outdoor" >
@@ -123,7 +123,9 @@
                                             <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                                 <div class="uk-width-auto uk-text-small text-color-level1 uk-text-bold">
                                                     <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
-                                                        <button class="uk-button uk-button-primary uk-button-small uk-border-rounded">Ready!</button>
+                                                        <h:commandButton styleClass="uk-button uk-button-primary uk-button-small uk-border-rounded"
+                                                                         value="Go!"
+                                                                         action="#{actividadBibliotecaLibre.buscaActividad(actividadModelo.idVideo)}"/>
                                                     </h:panelGroup>
                                                 </div>
                                                 <div class="uk-width-expand ">
@@ -142,6 +144,7 @@
                                 </h:panelGroup>
                             </li>
                         </ui:repeat>
+                    </h:form>
                 </ul>
             </div>
         </div>
