--- a/tecolotl-web/src/main/webapp/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/biblioteca-libre/free-library.xhtml
@@ -123,7 +123,7 @@
                                             <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                                 <div class="uk-width-auto uk-text-small text-color-level1 uk-text-bold">
                                                     <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
-                                                        <h:commandButton styleClass="uk-button uk-button-primary uk-button-small uk-border-rounded"
+                                                        <h:commandButton styleClass="uk-button uk-button-small uk-border-rounded"
                                                                          value="Go!"
                                                                          action="#{actividadBibliotecaLibre.buscaActividad(actividadModelo.idVideo)}"/>
                                                     </h:panelGroup>
